# Sibdev-test

./: .flake8  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  test.py
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: conftest.py  factories.py  test_accounts.py
apps/quotes/: admin.py  apps.py  caches.py  filters.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
apps/quotes/cbr_api/: __init__.py  api.py  utils.py
apps/quotes/management/commands/: load_quotes.py
apps/quotes/migrations/: 0001_initial.py
apps/quotes/tests/: conftest.py  factories.py  test_cache.py  test_cbr_api.py  test_quotes.py  test_tasks.py
apps/quotes/tests/snapshots/: snap_test_quotes.py
apps/utils/: redis_pool.py
env/: api.env  db.env
sibdev_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/: Dockerfile
static/conf/: static.conf
static/templates/: http.template
